# oa4j

./: .gitignore  CLAUDE.md  README.md
Example/: ReadMe.txt
Example/config/: config.java  config.level
Example/msg/: managers.cat
Example/panels/: JavaCtrlExt.pnl
Examples/Clojure/: pom.xml
Examples/WinCCOA/: ReadMe.txt
Examples/WinCCOA/config/: progs
Java/: ReadMe-OSS.txt  ReadMe.txt  header.bat  header.sh  install.sh  make.sh  pom.xml
Java/config/: config.level
Native/CtrlExt/: JavaCtrlExt.vcxproj  JavaExternHdl.cxx  JavaExternHdl.hxx  JavaResources.cxx  JavaResources.hxx  addVerInfo.cxx  domain-rename.sh
Native/CtrlExt/build-pre318/: JavaCtrlExt.sln  JavaCtrlExt.vcxproj
Native/Driver/: .gitignore  CMakeLists.txt  Makefile  VersInfo.rc  WCCOAJavaAlertService.cxx  WCCOAJavaAlertService.hxx  WCCOAJavaConnection.cxx  WCCOAJavaConnection.hxx  WCCOAJavaDrv.cxx  WCCOAJavaDrv.hxx  WCCOAJavaDrv.vcxproj  WCCOAJavaDrvExe.vcxproj  WCCOAJavaDrvIntDp.cxx  WCCOAJavaDrvIntDp.hxx  WCCOAJavaHWMapper.cxx  WCCOAJavaHWMapper.hxx  WCCOAJavaHWService.cxx  WCCOAJavaHWService.hxx  WCCOAJavaMain.cxx  WCCOAJavaResources.cxx  WCCOAJavaResources.hxx  WCCOAJavaTrans.cxx  WCCOAJavaTrans.hxx  addVerInfo.cxx  at_rocworks_oa4j_jni_Driver.cpp  at_rocworks_oa4j_jni_Driver.h  build.sh  make.env  make.sh
Native/Driver/build-pre318/: WCCOAJavaDrv.sln  WCCOAJavaDrv.vcxproj  WCCOAJavaDrvExe.vcxproj
Native/Driver/build-pre318/Debug/: WCCOAjavadrv.exp  WCCOAjavadrv.lib
Native/Driver/build-pre318/WCCOAjavadrv.dir/Debug/: VersInfo.res  WCCOAjavadrv.dll.recipe
Native/Driver/build-pre318/WCCOAjavadrv.dir/Debug/WCCOAJavaDrv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WCCOAJavaDrv.lastbuildstate  WCCOAJavaDrv.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Native/LibJava/: JNIValidator.cpp  JNIValidator.hxx  Java.cpp  Java.hxx
Native/Manager/: .gitignore  BUILD_README.md  CMakeLists.txt  Makefile  MakefileExe.gmk  VersInfo.rc  WCCOAJavaAlertHotLinkWaitForAnswer.cpp  WCCOAJavaAlertHotLinkWaitForAnswer.hxx  WCCOAJavaHotLinkWaitForAnswer.cpp  WCCOAJavaHotLinkWaitForAnswer.hxx  WCCOAJavaMain.cxx  WCCOAJavaManager.cxx  WCCOAJavaManager.hxx  WCCOAJavaManager.sln  WCCOAJavaManager.vcxproj  WCCOAJavaManagerExe.vcxproj  WCCOAJavaResources.cxx  WCCOAJavaResources.hxx  addVerInfo.cxx  at_rocworks_oa4j_jni_AnswerGroup.cpp  at_rocworks_oa4j_jni_Cns.cpp  at_rocworks_oa4j_jni_Cns.hxx  at_rocworks_oa4j_jni_DpIdValueList.cpp  at_rocworks_oa4j_jni_DpMsgAnswer.cpp  at_rocworks_oa4j_jni_DpMsgAnswer.h  at_rocworks_oa4j_jni_DpMsgComplexVC.cpp  at_rocworks_oa4j_jni_DpMsgHotLink.cpp  at_rocworks_oa4j_jni_DpMsgManipDp.cpp  at_rocworks_oa4j_jni_DpMsgRequest.cpp  at_rocworks_oa4j_jni_DpMsgRequest.h  at_rocworks_oa4j_jni_DpMsgValueChange.cpp  at_rocworks_oa4j_jni_DpVCGroup.cpp  at_rocworks_oa4j_jni_DpVCGroup.h  at_rocworks_oa4j_jni_DpVCItem.cpp  at_rocworks_oa4j_jni_Manager.cpp  at_rocworks_oa4j_jni_Manager.h  at_rocworks_oa4j_jni_Msg.cpp  at_rocworks_oa4j_jni_Msg.h  at_rocworks_oa4j_jni_RequestGroup.cpp  at_rocworks_oa4j_jni_RequestGroup.h  (+10 more)
Native/Manager/build - Copy/: .gitignore  ALL_BUILD.vcxproj  MANAGER_LIBS.vcxproj  MANAGER_LIBS.vcxproj.filters  Manager.sln  TARGET.vcxproj  WCCOAJavaManager.dll.vcxproj  WCCOAJavaManager.exe.vcxproj  WCCOAJavaManager.exe.vcxproj.filters  WCCOAJavaManagerDll.vcxproj  WCCOAJavaManagerExe.vcxproj  WCCOAManager.vcxproj  ZERO_CHECK.vcxproj  linkedAt_lib.vcxproj  linkedAt_touch.vcxproj  my_dll.vcxproj
Native/Manager/build-3.18/: WCCOAJavaManager.vcxproj  WCCOAJavaManagerExe.vcxproj
Native/Manager/build-3.19/: ALL_BUILD.vcxproj.filters  WCCOAJavaLibrary.vcxproj  WCCOAJavaLibrary.vcxproj.filters  WCCOAJavaManager.vcxproj  WCCOAJavaManager.vcxproj.filters  cmake_install.cmake  linkedAt_touch.vcxproj.filters
Native/Manager/build-pre-3.18/: WCCOAJavaManager.sln  WCCOAJavaManager.vcxproj  WCCOAJavaManagerExe.vcxproj
Native/ManagerV4/: Java.cpp  Java.hxx  Make.bat  MakefileDLL.gmk  README-Architecture.puml  README.md  WCCOAJavaAlertHotLinkWaitForAnswer.cpp  WCCOAJavaAlertHotLinkWaitForAnswer.hxx  WCCOAJavaHotLinkWaitForAnswer.cpp  WCCOAJavaHotLinkWaitForAnswer.hxx  WCCOAJavaMain.cxx  WCCOAJavaManager.cxx  WCCOAJavaManager.hxx  WCCOAJavaResources.cxx  __build.l4m  at_rocworks_oa4j_jni_AnswerGroup.cpp  at_rocworks_oa4j_jni_AnswerGroup.h  at_rocworks_oa4j_jni_DpIdValueList.cpp  at_rocworks_oa4j_jni_DpIdValueList.h  at_rocworks_oa4j_jni_DpMsg.h  at_rocworks_oa4j_jni_DpMsgAnswer.cpp  at_rocworks_oa4j_jni_DpMsgAnswer.h  at_rocworks_oa4j_jni_DpMsgComplexVC.h  at_rocworks_oa4j_jni_DpMsgHotLink.cpp  at_rocworks_oa4j_jni_DpMsgHotLink.h  at_rocworks_oa4j_jni_DpMsgManipDp.h  at_rocworks_oa4j_jni_DpMsgValueChange.cpp  at_rocworks_oa4j_jni_DpMsgValueChange.h  at_rocworks_oa4j_jni_DpVCGroup.cpp  at_rocworks_oa4j_jni_DpVCItem.cpp  at_rocworks_oa4j_jni_DpVCItem.h  at_rocworks_oa4j_jni_Manager.cpp  at_rocworks_oa4j_jni_Manager.h  at_rocworks_oa4j_jni_SysMsg.cpp
Native/Tools/: build-all.bat  deploy.bat  vc-build.bat  vc-build_3.13.bat  vc-build_3.14.bat  vc-build_3.15.bat  vc-build_3.17.bat  vc-build_3.18.bat  vc-env_3.13.bat  vc-env_3.14.bat  vc-env_3.15.bat  vc-env_3.16.bat  vc-env_3.17.bat  vc-env_3.18.bat  vc-env_3.19.bat  vc-start_3.13.bat  vc-start_3.14.bat  vc-start_3.15.bat  vc-start_3.16.bat  vc-start_3.17.bat  vc-start_3.18.bat  vc-start_3.19.bat
Project/Drivers/Epics/: Epics.ipr  ReadMe.txt  pom.xml
Project/Drivers/Kafka/: Kafka.ipr  ReadMe.txt  pom.xml
Project/Drivers/Mqtt/: Mqtt.ipr  ReadMe.txt  pom.xml
Project/Drivers/Template/: Driver.ipr  ReadMe.txt  pom.xml
Project/Example/: Example.bat  ReadMe.txt
Project/Logger/: Logger.ipr  ReadMe.txt  make.sh  pom.xml
Scala/: Test.bat
Scala/src/: Test.scala
Tools/: build-all.bat  deploy.bat  vc-build.bat  vc-build_3.15.bat  vc-build_3.16.bat  vc-env_3.14.bat  vc-start.bat  vc-start_3.13.bat  vc-start_3.14.bat  vc-start_3.15.bat
docs/: API.md  CNS.md  CNS_API_Implementation_Plan.md  DPS.md  README-Architecture.puml  WinCCOA.md
(+220 files in other folders)
